RESOLVED FIXED25125
REGRESSION (r42334): Scrollbars disappear on GMail after resizing window
https://bugs.webkit.org/show_bug.cgi?id=25125
Summary REGRESSION (r42334): Scrollbars disappear on GMail after resizing window
Sam Weinig
Reported 2009-04-09 16:19:34 PDT
In gmail, if you resize the window, the vertical scrollbar goes away.
Attachments
Patch (11.69 KB, patch)
2009-04-13 13:25 PDT, Dave Hyatt
sam: review+
Sam Weinig
Comment 1 2009-04-09 16:21:32 PDT
Pam Greene (IRC:pamg)
Comment 2 2009-04-09 18:34:36 PDT
Happen to know which revision caused this?
Adam Roben (:aroben)
Comment 3 2009-04-10 13:23:01 PDT
I believe this was caused by r42334. <http://trac.webkit.org/changeset/42334>
Dave Hyatt
Comment 4 2009-04-13 13:25:44 PDT
Sam Weinig
Comment 5 2009-04-13 13:52:42 PDT
Comment on attachment 29435 [details] Patch Yeah for scrollbars! r=me
Dave Hyatt
Comment 6 2009-04-13 14:34:35 PDT
Fixed in r42464.
Brett Wilson (Google)
Comment 7 2009-04-15 09:39:49 PDT
*** Bug 25203 has been marked as a duplicate of this bug. ***
Mike Pinkerton
Comment 8 2009-04-15 09:46:18 PDT
This seems to be the kind of thing that a layout test would have caught before the initial regression. It would benefit everyone if there was a layout test written to prevent this from happening again and verify that this patch actually fixes the reported problem.
BJ Homer
Comment 9 2009-04-21 21:44:49 PDT
I'm still having this problem occasionally in r42662. I haven't found a consistent way to reproduce it, but it most commonly happens when I open a new gmail conversation which has multiple unread components and thus extends off the bottom of the screen.
Note You need to log in before you can comment on or make changes to this bug.