WebCore/page/FrameView.h
@@ -204,8 +204,12 @@ private:
 
     virtual void repaintContentRectangle(const IntRect&, bool immediate);
     virtual void contentsResized() { setNeedsLayout(); }
-    virtual void visibleContentsResized() { layout(); }
-    
+    virtual void visibleContentsResized()
+    {
+        if (needsLayout())
+            layout();
+    }
+
     void deferredRepaintTimerFired(Timer<FrameView>*);
     void doDeferredRepaints();
     void updateDeferredRepaintDelay();
