WebCore/platform/ScrollView.cpp
@@ -45,7 +45,7 @@ ScrollView::ScrollView()
     , m_canBlitOnScroll(true)
     , m_scrollbarsAvoidingResizer(0)
     , m_scrollbarsSuppressed(false)
-    , m_updatingScrollbarAttributes(false)
+    , m_inUpdateScrollbars(false)
     , m_updateScrollbarsPass(0)
     , m_drawPanScrollIcon(false)
     , m_useFixedLayout(false)
@@ -318,7 +318,7 @@ static const unsigned cMaxUpdateScrollbarsPass = 2;
 
 void ScrollView::updateScrollbars(const IntSize& desiredOffset)
 {
-    if (m_updatingScrollbarAttributes || prohibitsScrolling() || platformWidget())
+    if (m_inUpdateScrollbars || prohibitsScrolling() || platformWidget())
         return;
 
     bool hasHorizontalScrollbar = m_horizontalScrollbar;
@@ -340,6 +340,13 @@ void ScrollView::updateScrollbars(const IntSize& desiredOffset)
         if (hasVerticalScrollbar != newHasVerticalScrollbar)
             setHasVerticalScrollbar(newHasVerticalScrollbar);
     } else {
+        // If we came in here with the view already needing a layout, then go ahead and do that
+        // first.  (This will be the common case, e.g., when the page changes due to window resizing for example).
+        // This layout will not re-enter updateScrollers and does not count towards our max layout pass total.
+        m_inUpdateScrollbars = true;
+        visibleContentsResized();
+        m_inUpdateScrollbars = false;
+
         bool sendContentResizedNotification = false;
         
         IntSize docSize = contentsSize();
@@ -368,6 +375,7 @@ void ScrollView::updateScrollbars(const IntSize& desiredOffset)
 
         if (sendContentResizedNotification && m_updateScrollbarsPass < cMaxUpdateScrollbarsPass) {
             m_updateScrollbarsPass++;
+            contentsResized();
             visibleContentsResized();
             IntSize newDocSize = contentsSize();
             if (newDocSize == docSize) {
@@ -385,7 +393,7 @@ void ScrollView::updateScrollbars(const IntSize& desiredOffset)
     if (m_updateScrollbarsPass)
         return;
 
-    m_updatingScrollbarAttributes = true;
+    m_inUpdateScrollbars = true;
     IntSize maxScrollPosition(contentsWidth() - visibleWidth(), contentsHeight() - visibleHeight());
     IntSize scroll = desiredOffset.shrunkTo(maxScrollPosition);
     scroll.clampNegativeToZero();
@@ -451,7 +459,7 @@ void ScrollView::updateScrollbars(const IntSize& desiredOffset)
        scrollContents(scrollDelta);
     }
 
-    m_updatingScrollbarAttributes = false;
+    m_inUpdateScrollbars = false;
 }
 
 const int panIconSizeLength = 20;
