WebKit/mac/WebView/WebHTMLView.mm
@@ -397,7 +397,6 @@ struct WebHTMLViewInterpretKeyEventsParameters {
 @interface WebHTMLViewPrivate : NSObject {
 @public
     BOOL closed;
-    BOOL needsLayout;
     BOOL needsToApplyStyles;
     BOOL ignoringMouseDraggedEvents;
     BOOL printing;
@@ -1149,9 +1148,10 @@ static void _updateMouseoverTimerCallback(CFRunLoopTimerRef timer, void *info)
 
 - (void)_frameOrBoundsChanged
 {
-    if (!NSEqualSizes(_private->lastLayoutSize, [(NSClipView *)[self superview] documentVisibleRect].size)) {
+    if (!NSEqualSizes(_private->lastLayoutSize, [[self superview] bounds].size)) {
         [self setNeedsLayout:YES];
         [self setNeedsDisplay:YES];
+        _private->lastLayoutSize = [[self superview] bounds].size;
         [_private->compController endRevertingChange:NO moveLeft:NO];
     }
 
@@ -2255,7 +2255,6 @@ static void _updateMouseoverTimerCallback(CFRunLoopTimerRef timer, void *info)
     _private = [[WebHTMLViewPrivate alloc] init];
 
     _private->pluginController = [[WebPluginController alloc] initWithDocumentView:self];
-    _private->needsLayout = YES;
     
     return self;
 }
@@ -2931,7 +2930,7 @@ static void _updateFocusedAndActiveStateTimerCallback(CFRunLoopTimerRef timer, v
 {
     [self reapplyStyles];
     
-    if (!_private->needsLayout && ![[self _frame] _needsLayout])
+    if (![self _needsLayout])
         return;
 
 #ifdef LOG_TIMES        
@@ -2941,10 +2940,8 @@ static void _updateFocusedAndActiveStateTimerCallback(CFRunLoopTimerRef timer, v
     LOG(View, "%@ doing layout", self);
 
     Frame* coreFrame = core([self _frame]);
-    if (!coreFrame) {
-        _private->needsLayout = NO;
+    if (!coreFrame)
         return;
-    }
 
     if (FrameView* coreView = coreFrame->view()) {
         if (minPageWidth > 0.0)
@@ -2955,11 +2952,7 @@ static void _updateFocusedAndActiveStateTimerCallback(CFRunLoopTimerRef timer, v
                 coreView->adjustViewSize();
         }
     }
-    _private->needsLayout = NO;
     
-    if (!_private->printing)
-        _private->lastLayoutSize = [(NSClipView *)[self superview] documentVisibleRect].size;
-
 #ifdef LOG_TIMES        
     double thisTime = CFAbsoluteTimeGetCurrent() - start;
     LOG(Timing, "%s layout seconds = %f", [self URL], thisTime);
@@ -3051,7 +3044,14 @@ static void _updateFocusedAndActiveStateTimerCallback(CFRunLoopTimerRef timer, v
 - (void)setNeedsLayout: (BOOL)flag
 {
     LOG(View, "%@ setNeedsLayout:%@", self, flag ? @"YES" : @"NO");
-    _private->needsLayout = flag;
+    if (!flag)
+        return; // There's no way to say you don't need a layout.
+    if (Frame* frame = core([self _frame])) {
+        if (frame->document() && frame->document()->inPageCache())
+            return;
+        if (FrameView* view = frame->view())
+            view->setNeedsLayout();
+    }
 }
 
 - (void)setNeedsToApplyStyles: (BOOL)flag
@@ -5109,9 +5109,7 @@ static CGPoint coreGraphicsScreenPointForAppKitScreenPoint(NSPoint point)
 {
     ASSERT(!_private->subviewsSetAside);
 
-    if ([[self _frame] _needsLayout])
-        _private->needsLayout = YES;
-    if (_private->needsToApplyStyles || _private->needsLayout)
+    if (_private->needsToApplyStyles || [self _needsLayout])
         [self layout];
 }
 
@@ -5146,6 +5144,11 @@ static CGPoint coreGraphicsScreenPointForAppKitScreenPoint(NSPoint point)
 - (BOOL)_isResigningFirstResponder
 {
     return _private->resigningFirstResponder;
+}
+
+- (BOOL)_needsLayout
+{
+    return [[self _frame] _needsLayout];
 }
 
 #if USE(ACCELERATED_COMPOSITING)
