WebKit/mac/WebView/WebHTMLViewInternal.h
@@ -59,6 +59,7 @@ namespace WebCore {
 - (void)_web_layoutIfNeededRecursive;
 - (void)_destroyAllWebPlugins;
 - (BOOL)_isResigningFirstResponder;
+- (BOOL)_needsLayout;
 
 #if USE(ACCELERATED_COMPOSITING)
 - (void)attachRootLayer:(CALayer*)layer;
